More moder CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,6 @@ project(swc)
 
 set(CMAKE_AUTOMOC ON)
 
-# specify source files
-set(SOURCES
-    swc/main.cpp
-    swc/AnimatedContainer.cpp
-    swc/CommandLineParser.cpp
-    swc/Settings.cpp)
-include_directories(swc)
-
 # find Qt5 packages
 find_package(Qt5Widgets REQUIRED)
 find_package(Qt5DBus REQUIRED)
@@ -32,18 +24,6 @@ else (h2m_PROGRAM)
   message(FATAL_ERROR "help2man is not installed")
 endif (h2m_PROGRAM)
 
-# create the executable
-add_executable(swc ${SOURCES})
-target_link_libraries(swc Qt5::Widgets Qt5::DBus xdo)
 
-# grenarate the manpage
-add_custom_command(TARGET swc POST_BUILD
-    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/man/genman.sh ${CMAKE_CURRENT_SOURCE_DIR}/man/*.h2m
-    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-    COMMENT "Generating swc's manpage")
-
-# add an install rule for both the executable and the manpage
-INSTALL(TARGETS swc
-    RUNTIME DESTINATION bin)
-INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/swc.1.gz
-    DESTINATION ${CMAKE_INSTALL_PREFIX}/man/man1)
+# build swc
+add_subdirectory(swc)
