create ModuleGrid to create and manage all modules in an AnimatedModuleContainer

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(SOURCES
-    CPUGraph.cpp)
+    LineGraph.cpp
+    ModuleGrid.cpp
+    ModuleUtils.cpp)
 
 add_library(modules ${SOURCES})
-target_link_libraries(modules utils Qt5::Charts)
+target_link_libraries(modules utils Qt5::Core Qt5::Charts)
 target_include_directories(modules PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
