utils: create MemStatsReader

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(SOURCES
-    CPUStatsReader.cpp)
+    CPUStatsReader.cpp
+    MemStatsReader.cpp)
 
 add_library(utils ${SOURCES})
 target_include_directories(utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
