utils: create NetworkStatsReader

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -2,7 +2,8 @@ set(SOURCES
     CPUStatsReader.cpp
     DataUsage.cpp
     DiskStatsReader.cpp
-    MemStatsReader.cpp)
+    MemStatsReader.cpp
+    NetworkStatsReader.cpp)
 
 add_library(utils ${SOURCES})
 target_include_directories(utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
