modules: "net" DataSource can specify upload or download

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCES
     Graph.cpp
     ModuleGrid.cpp
     ModuleInfos.cpp
+    ModuleInfosDeserialize.cpp
     ModuleSize.cpp
     ModuleUtils.cpp)
 
